--- a/Web/ClientApp/src/app/component/register/register.component.html
+++ b/Web/ClientApp/src/app/component/register/register.component.html
@@ -3,20 +3,18 @@
     <div class="col-6 offset-3">
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="username">Nazwa u&#380;ytkownika</label>
+          <label for="username">Nazwa użytkownika</label>
           <input id="username" class="form-control" type="text" formControlName="username">
         </div>
         <div class="form-group">
-          <label for="password">Has&#322;o</label>
+          <label for="password">Hasło</label>
           <input id="password" class="form-control" type="password" formControlName="password">
         </div>
         <div class="form-group">
-          <label for="confirmPassword">Potwierd&#378; has&#322;o</label>
+          <label for="confirmPassword">Potwierdź hasło</label>
           <input id="confirmPassword" class="form-control" type="password" formControlName="confirmPassword">
         </div>
-        <div class="d-flex justify-content-center">
-          <button class="btn btn-primary d-flex justify-content-center" type="submit" [disabled]="!registerForm.valid">Zarejestruj si&#281;</button>
-        </div>
+        <button class="btn btn-primary" type="submit" [disabled]="!registerForm.valid">Zarejestruj się</button>
       </form>
     </div>
   </div>
