--- a/Web/ClientApp/src/app/component/profile/profile.component.html
+++ b/Web/ClientApp/src/app/component/profile/profile.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <form [formGroup]="form">
+  <div *ngIf="loading">
+    <h3>Ładowanie</h3>
+  </div>
+  <form *ngIf="!loading" [formGroup]="form">
     <div class="row">
       <div class="col-md-4" style="text-align: center">
         <!--TODO: CENTER THIS-->
@@ -12,7 +15,8 @@
                    (change)="processFile(imageInput)">
           </label>
         </div>
-        <img *ngIf="this.form.disabled" id="profileImage" class="profile-img" [src]="defaultImage" />
+        <img *ngIf="!user.profileImage && this.form.disabled" id="profileImage" class="profile-img" [src]="defaultImage"/>
+        <img *ngIf="user.profileImage && this.form.disabled" id="profileImage" class="profile-img" [src]="user.profileImage"/>
       </div>
       <div class="col-md-8">
         <div class="form-group">
