--- a/Web/ClientApp/src/app/component/profile/profile.component.html
+++ b/Web/ClientApp/src/app/component/profile/profile.component.html
@@ -15,8 +15,8 @@
                    (change)="processFile(imageInput)">
           </label>
         </div>
-        <img *ngIf="!user.profileImage && this.form.disabled" id="profileImage" class="profile-img" [src]="defaultImage"/>
-        <img *ngIf="user.profileImage && this.form.disabled" id="profileImage" class="profile-img" [src]="user.profileImage"/>
+        <img *ngIf="useDefaultImage() && this.form.disabled" id="profileImage" class="profile-img" [src]="defaultImage"/>
+        <img *ngIf="!useDefaultImage() && this.form.disabled" id="profileImage" class="profile-img" [src]="user$.value.profileImage"/>
       </div>
       <div class="col-md-8">
         <div class="form-group">
@@ -53,7 +53,10 @@
       <a *ngIf="isProfileOwner() && form.enabled" class="btn btn-primary" (click)="formSubmit()">
         <fa-icon [icon]="faSave" class="white-icon"></fa-icon>
       </a>
-      <a *ngIf="!isProfileOwner() && (identityService.isInRole('admin') || (identityService.isInRole('moderator') && isInRole('admin')))" class="btn btn-danger" (click)="banUser()">
+      <a *ngIf="!isProfileOwner() && isBanned() && (identityService.isInRole('admin') || (identityService.isInRole('moderator') && isInRole('admin')))" class="btn btn-primary" (click)="unbanUser()">
+        <fa-icon [icon]="faBan" class="white-icon"></fa-icon>
+      </a>
+      <a *ngIf="!isProfileOwner() && !isBanned() && (identityService.isInRole('admin') || (identityService.isInRole('moderator') && isInRole('admin')))" class="btn btn-danger" (click)="banUser()">
         <fa-icon [icon]="faBan" class="white-icon"></fa-icon>
       </a>
       <a *ngIf="isProfileOwner() || (identityService.isInRole('admin') && isBanned())" class="btn btn-danger" (click)="deleteUser()">
