--- a/Web/ClientApp/src/app/component/nav-menu/nav-menu.component.html
+++ b/Web/ClientApp/src/app/component/nav-menu/nav-menu.component.html
@@ -22,7 +22,7 @@
           <li *ngIf="this.identityService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/orders']">Zamówienia</a>
           </li>
-          <li *ngIf="this.identityService.isInRole('admin') || this.identityService.isInRole('moderator')" class="nav-item" [routerLinkActive]="['link-active']">
+          <li *ngIf="this.identityService.isInRole('admin')" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/administration']">Panel</a>
           </li>
           <li *ngIf="this.identityService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
