--- a/Web/ClientApp/src/app/component/login/login.component.html
+++ b/Web/ClientApp/src/app/component/login/login.component.html
@@ -1,19 +1,18 @@
 <div class="container">
   <div class="row">
     <div class="col-6 offset-3">
+      <app-form-error [submitted]="submitted" [errors]="errors"></app-form-error>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="username">Nazwa użytkownika</label>
           <input id="username" class="form-control" type="text" formControlName="username">
-          <app-form-error [control]="loginForm.controls.username" [submitted]="submitted" error="required">Nazwa użytkownika jest wymagana</app-form-error>
         </div>
         <div class="form-group">
           <label for="password">Hasło</label>
           <input id="password" class="form-control" type="password" formControlName="password">
-          <app-form-error [control]="loginForm.controls.username" [submitted]="submitted" error="required">Hasło nie może być puste</app-form-error>
         </div>
         <div class="d-flex justify-content-center">
-          <button class="btn btn-primary d-flex justify-content-center" type="submit" [disabled]="!loginForm.valid">Zaloguj</button>
+          <button class="btn btn-primary d-flex justify-content-center" type="submit">Zaloguj</button>
           <a class="nav-link text-blue" [routerLink]="['/register']">Nie masz konta? Zarejestruj się!</a>
         </div>
       </form>
