--- a/Web/ClientApp/src/app/component/register/register.component.html
+++ b/Web/ClientApp/src/app/component/register/register.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-6 offset-3">
+      <app-form-error [submitted]="submitted" [errors]="errors"></app-form-error>
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="username">Nazwa użytkownika</label>
@@ -14,7 +15,7 @@
           <label for="confirmPassword">Potwierdź hasło</label>
           <input id="confirmPassword" class="form-control" type="password" formControlName="confirmPassword">
         </div>
-        <button class="btn btn-primary" type="submit" [disabled]="!registerForm.valid">Zarejestruj się</button>
+        <button class="btn btn-primary" type="submit">Zarejestruj się</button>
       </form>
     </div>
   </div>
