--- a/Web/ClientApp/src/app/component/administration/administration.component.html
+++ b/Web/ClientApp/src/app/component/administration/administration.component.html
@@ -1,1 +1,48 @@
 <h1> MODUŁ ADMINISTRACYJNY BETA</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 align-self-center">
+      <div class="allign-items-center">
+        <button type="button" (click)="showAdmins()" class="btn btn-primary btn-lg btn-block">Administratorzy</button>
+        <button type="button" (click)="showMods()" class="btn btn-primary btn-lg btn-block">Moderatorzy</button>
+        <button type="button" (click)="showLogs()" class="btn btn-primary btn-lg btn-block">Logi</button>
+      </div>
+    </div>
+    <div class="col-md-8 align-self-center">
+      <ul class="list-group" *ngIf="adminsShowBool">
+        <li class="list-group-item">
+
+          <form [formGroup]="addingAdminForm" (ngSubmit)="addAdminRole()">
+            <div class="form-group">
+              <label for="adminName">Administratorzy</label>
+              <input id="adminName" formControlName="adminName" type="text" class="form-control" placeholder="Wpisz nazwę użytkownika, któremu chcesz nadać rolę" />
+            </div>
+              <button type="submit" [disabled]="!addingAdminForm.valid" class="btn-add btn-success btn-md">Dodaj</button>
+          </form>
+
+        </li>
+        <li class="list-group-item" *ngFor="let admin of adminsArray">
+          <div>
+            {{admin.userName}}
+            <button type="button" (click)="deleteAdmin(admin)" class="btn-delete btn-danger btn-md">Usuń</button>
+          </div>
+        </li>
+        <li class="list-group-item">ADMINS</li>
+      </ul>
+      <ul class="list-group" *ngIf="modsShowBool">
+        <li class="list-group-item" *ngFor="let mod of modsArray">
+          {{mod.userName}}
+          <button type="button" (click)="deleteAdmin(admin)" class="btn-delete btn-danger btn-md">Usuń</button>
+        </li>
+        <li class="list-group-item">MODS</li>
+      </ul>
+      <ul class="list-group" *ngIf="logsShowBool">
+        <li class="list-group-item" *ngFor="let admin of adminsArray">
+          {{admin.userName}}
+          <button type="button" (click)="deleteAdmin(admin)" class="btn-delete btn-danger btn-md">Usuń</button>
+        </li>
+        <li class="list-group-item">LOGS</li>
+      </ul>
+    </div>
+  </div>
+</div>
