Profile validation and tooltips.

--- a/Web/ClientApp/src/app/component/profile/profile.component.css
+++ b/Web/ClientApp/src/app/component/profile/profile.component.css
@@ -6,3 +6,18 @@
 .white-icon {
   color: white;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+a {
+  margin-left: 2px;
+  margin-right: 2px;
+}
