--- a/Web/ClientApp/src/app/component/profile/profile.component.html
+++ b/Web/ClientApp/src/app/component/profile/profile.component.html
@@ -21,7 +21,7 @@
       <div class="col-md-8">
         <div class="form-group">
           <label for="userName">Nazwa użytkownika</label>
-          <input id="userName" disabled class="form-control" type="text" formControlName="userName">
+          <input id="userName" class="form-control" type="text" formControlName="userName">
         </div>
         <div class="form-group">
           <label for="telephoneNumber">Numer telefonu</label>
