--- a/Web/ClientApp/src/app/component/nav-menu/nav-menu.component.html
+++ b/Web/ClientApp/src/app/component/nav-menu/nav-menu.component.html
@@ -1,14 +1,26 @@
 <header>
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">dyszka.pl</a>
+      <form [formGroup]="form">
+        <div class="input-group">
+          <input id="query" class="form-control" type="text" formControlName="query">
+          <div class="input-group-apend">
+            <a class="btn btn-primary" type="submit" mat-raised-buttonjes
+               #tooltip="matTooltip"
+               matTooltip="Wyszukaj po tagach"
+               (click)="onSubmit()">
+              <fa-icon [icon]="faSearch" class="white-icon"></fa-icon>
+            </a>
+          </div>
+        </div>
+      </form>
       <button class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target=".navbar-collapse"
-        aria-label="Toggle navigation"
-        [attr.aria-expanded]="isExpanded"
-        (click)="toggle()">
+              type="button"
+              data-toggle="collapse"
+              data-target=".navbar-collapse"
+              aria-label="Toggle navigation"
+              [attr.aria-expanded]="isExpanded"
+              (click)="toggle()">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngClass]="{ show: isExpanded }">
