--- a/Web/ClientApp/src/app/component/offer/details/offer-details.component.html
+++ b/Web/ClientApp/src/app/component/offer/details/offer-details.component.html
@@ -46,4 +46,5 @@
       <fa-icon [icon]="faBan" class="white-icon"></fa-icon>
     </a>
   </div>
+  <app-comment [offerId]="offer.id"></app-comment>
 </div>
