--- a/Web/ClientApp/src/app/component/administration/administration.component.html
+++ b/Web/ClientApp/src/app/component/administration/administration.component.html
@@ -1,14 +1,13 @@
-<h1> MODUŁ ADMINISTRACYJNY BETA</h1>
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="allign-items-center">
         <button type="button" #admins (click)="showAdmins()" class="btn btn-primary btn-lg btn-block">Administratorzy</button>
         <button type="button" (click)="showMods()" class="btn btn-primary btn-lg btn-block">Moderatorzy</button>
         <button type="button" (click)="showLogs()" class="btn btn-primary btn-lg btn-block">Logi</button>
       </div>
     </div>
-    <div class="col-md-8 align-self-center">
+    <div class="col-md-9 align-self-center">
       <ul class="list-group" *ngIf="adminsShowBool">
         <li class="list-group-item">
 
@@ -47,23 +46,33 @@
           <button type="button" (click)="deleteMod(mod)" class="btn-delete btn-danger btn-md">Usuń</button>
         </li>
       </ul>
-      <ul class="list-group" *ngIf="logsShowBool">
-        <li class="list-group-item" *ngFor="let log of logsArray$.value">
-          <div id="logBlock">
-            <div id="log">{{log.message}}</div>
-            <div id="logDate">{{log.createdDate}}</div>
-          </div>
-        </li>
-      </ul>
+      <table class="table" *ngIf="logsShowBool">
+        <thead>
+        <tr>
+          <th scope="col">Wykonujący</th>
+          <th scope="col">Akcja</th>
+          <th scope="col">Id elementu</th>
+          <th scope="col">Data</th>
+        </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let log of logsArray$.value">
+            <td>{{ log.authorUsername }}</td>
+            <td>{{ log.message }}</td>
+            <td>{{ log.affectedEntityId }}</td>
+            <td>{{ log.createdDate | date: 'dd.MM.yyyy hh:mm'}}</td>
+          </tr>
+        </tbody>
+      </table>
       <div class="row">
         <div class="col-md-6 btnNext">
           <div *ngIf="logsShowBool && currentLogsPage > 1">
-            <button class="btn btn-primary" (click)="getLogsPage(currentLogsPage - 1)"> poprzednia strona</button>
+            <button class="btn btn-primary" (click)="getLogsPage(currentLogsPage - 1)"> Poprzednia strona</button>
           </div>
         </div>
         <div class="col-md-6 btnPrevious">
           <div *ngIf="logsShowBool && currentLogsPage < maxLogPage">
-            <button class="btn btn-primary" (click)="getLogsPage(currentLogsPage + 1)"> następna strona</button>
+            <button class="btn btn-primary" (click)="getLogsPage(currentLogsPage + 1)"> Następna strona</button>
           </div>
         </div>
       </div>
