--- a/Web/ClientApp/src/app/component/nav-menu/nav-menu.component.html
+++ b/Web/ClientApp/src/app/component/nav-menu/nav-menu.component.html
@@ -36,7 +36,7 @@
           <li *ngIf="!this.identityService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login']">Zaloguj się</a>
           </li>
-          <li *ngIf="this.identityService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
+          <li *ngIf="this.identityService.isLoggedIn() && !identityService.isBanned()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/profile']">Profil</a>
           </li>
           <li *ngIf="this.identityService.isLoggedIn() && !identityService.isBanned()" class="nav-item" [routerLinkActive]="['link-active']">
@@ -47,6 +47,9 @@
           </li>
           <li *ngIf="this.identityService.isInRole('admin')" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/administration']">Panel</a>
+          </li>
+          <li *ngIf="this.identityService.isLoggedIn() && identityService.isBanned()" class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-red">UŻYTKOWNIK ZBANOWANY</a>
           </li>
           <li *ngIf="this.identityService.isLoggedIn()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" (click)="this.identityService.logout()">Wyloguj się</a>
