--- a/Web/ClientApp/src/app/component/offer/details/offer-details.component.html
+++ b/Web/ClientApp/src/app/component/offer/details/offer-details.component.html
@@ -2,11 +2,12 @@
   <h3>Ładowanie...</h3>
 </div>
 <div *ngIf="!loading" class="container">
+  <h2 *ngIf="offer.isHidden || offer.isBlocked" style="color:red">TA OFERTA JEST NIEAKTYWNA</h2>
   <app-form-error [submitted]="submitted" [errors]="errors"></app-form-error>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="row">
       <div class="col-md-8" style="text-align: center">
-        <img id="image" class="offer-img" [src]="offer.image" />
+        <img id="image" class="offer-img" [src]="offer.image"/>
       </div>
       <div class="col-md-4">
         <div class="form-group">
