Added value to payments table.

--- a/Web/ClientApp/src/app/component/administration/administration.component.html
+++ b/Web/ClientApp/src/app/component/administration/administration.component.html
@@ -96,6 +96,7 @@
           <tbody>
             <tr *ngFor="let payment of payments">
               <td>{{ payment.createdDate | date: 'dd.MM.yyyy HH:mm'}}</td>
+              <td>{{ payment.value | currency: 'PLN'}}</td>
               <td>{{ payment.orderId}}</td>
               <td>
                 <a *ngIf="payment.offerId"
