Added go back to main page link.

--- a/Web/ClientApp/src/app/component/forbidden/forbidden.component.html
+++ b/Web/ClientApp/src/app/component/forbidden/forbidden.component.html
@@ -6,6 +6,9 @@
           <h2 class="error-description">
             Użytkownik nie posiada wymaganych uprawnień lub strona nie istnieje
           </h2>
+          <h3 class="nav-link" [routerLink]="['/']">
+            Wróć na stronę główną
+          </h3>
           <div class="cat-image"></div>
           <br />
         </div>
